# demo-C

./: .gitignore  README.md
src/apue/: CMakeLists.txt
src/apue/access_file/: access_file.c  makefile
src/apue/atexit/: atexit.c  makefile
src/apue/chmod/: chmod.c  makefile
src/apue/chown/: chown.c  makefile
src/apue/command_arguments/: command_arguments.c  makefile
src/apue/creat/: Makefile  creat.c
src/apue/demo/: Makefile  demo.c
src/apue/dup/: Makefile  dup.c
src/apue/environ/: environ.c  makefile
src/apue/error_process/: error_process.c  makefile
src/apue/execve/: execve.c  makefile  myecho.c
src/apue/exit/: exit.c  makefile
src/apue/fcntl_fd/: Makefile  fcntl_fd.c
src/apue/fcntl_getfl/: fcntl_getfl.c  makefile
src/apue/fcntl_setfl/: Makefile  fcntl_setfl.c
src/apue/file_tree_walk/: file_tree_walk.c  makefile
src/apue/fork/: fork.c  makefile
src/apue/futimens/: futimens.c  makefile
src/apue/fwide/: byte.txt  fwide.c  makefile
src/apue/getcwd/: Makefile  getcwd.c
src/apue/getenv/: getenv.c  makefile
src/apue/getlogin/: getlogin.c  makefile
src/apue/getpid/: getpid.c  makefile
src/apue/getrlimit/: getrlimit.c  makefile
src/apue/getuid_geteuid/: getuid_geteuid.c  makefile
src/apue/io_cached/: makefile
src/apue/lib/: error.c  error.h  error_test.c  makefile  read_write.c  read_write_test.c  unp.h  util.c
src/apue/link/: link.c  makefile
src/apue/list_files/: list_files.c  makefile
src/apue/ls/: Makefile  ls.c
src/apue/mkdir/: makefile  mkdir.c
src/apue/open_file/: makefile  open_file.c
src/apue/printf/: makefile  printf  printf.c
src/apue/process_control/: makefile  process_control.c
src/apue/process_control_signal_int/: makefile  process_control_signal_int.c
src/apue/process_times/: makefile  process_times.c
src/apue/race_condition/: makefile  race_condition.c
src/apue/read_stdin_write_stdout/: makefile  read_stdin_write_stdout.c
src/apue/read_stdin_write_stdout2/: makefile  read_stdin_write_stdout2  read_stdin_write_stdout2.c
src/apue/read_stdio_write_stdout/: read_stdin_write_stdout.c
src/apue/readlink/: makefile  readlink.c
src/apue/seek_long/: makefile  seek_long.c
src/apue/seek_stdin/: makefile  seek_stdin.c
src/apue/setjmp_longjmp/: makefile  setjmp_longjmp.c
src/apue/stat_demo/: Makefile  stat_demo.c
src/apue/stat_file_mode/: makefile  stat_file_mode.c
src/apue/symlink/: makefile  symlink.c
src/apue/sysconf/: generate.awk  makefile  pathconf.conf  sysconf.conf
src/unp/: CMakeLists.txt
(+359 files in other folders)
